# particledi

./: .gitignore  CMakeLists.txt  README.md  package.cpp  package.yaml  particledi.cpp  particledi.hpp  particledi.pc.in  test.cpp
